--- a/css/saga-card.css
+++ b/css/saga-card.css
@@ -35,6 +35,15 @@
     height: auto;
 }
 
+.saga>.text-and-art>.art-placeholder {
+    display: inline-block;
+    width: 29mm;
+    position: absolute;
+    right: 0;
+    height: 100%;
+    background: linear-gradient(45deg, white 0%, lightgrey 50%, white 100%);
+}
+
 .saga>.text-and-art>.text-box>p {
     margin-top: 0;
     margin-bottom: 0;
