--- a/css/saga-card.css
+++ b/css/saga-card.css
@@ -1,69 +1,66 @@
-.saga>.text-and-art {
-    border-width: 0;
-    width: 56mm;
-    margin: 0 auto;
-    border-width: 0;
-    height: 69mm;
-    position: relative;
-}
+ div.card.saga div.text-and-art {
+     border-width: 0;
+     width: 56mm;
+     margin: 0 auto;
+     border-width: 0;
+     height: 69mm;
+     position: relative;
+ }
 
-.saga>.title-bar,
-.saga>.type-bar {
-    padding: 0.5mm 1.5mm;
-}
+ div.card.saga div.text-and-art div.text-box,
+ div.card.sage div.text-and-art img.art,
+ div.card.saga div.text-and-art div.art-placeholder {
+     border-width: 0 0.25mm;
+     border-style: solid;
+     border-color: black;
+ }
 
-.saga>.text-and-art>* {
-    border-width: 0 0.25mm;
-    border-style: solid;
-    border-color: black;
-}
+ div.card.saga div.text-and-art div.text-box {
+     border-right-width: 0;
+     position: absolute;
+     left: 0;
+     width: 25mm;
+     height: calc(100% - 2mm);
+     padding: 1mm;
+ }
 
-.saga>.text-and-art>.text-box {
-    border-right-width: 0;
-    position: absolute;
-    left: 0;
-    width: 25mm;
-    height: calc(100% - 2mm);
-    padding: 1mm;
-}
+ div.card.saga div.text-and-art img.art {
+     display: inline-block;
+     width: 29mm;
+     position: absolute;
+     right: 0;
+     height: auto;
+ }
 
-.saga>.text-and-art>img {
-    display: inline-block;
-    width: 29mm;
-    position: absolute;
-    right: 0;
-    height: auto;
-}
+ div.card.saga div.text-and-art div.art-placeholder {
+     display: inline-block;
+     width: 29mm;
+     position: absolute;
+     right: 0;
+     height: 100%;
+     background: linear-gradient(45deg, white 0%, lightgrey 50%, white 100%);
+ }
 
-.saga>.text-and-art>.art-placeholder {
-    display: inline-block;
-    width: 29mm;
-    position: absolute;
-    right: 0;
-    height: 100%;
-    background: linear-gradient(45deg, white 0%, lightgrey 50%, white 100%);
-}
+ div.card.saga div.text-and-art div.text-box p {
+     margin-top: 0;
+     margin-bottom: 0;
+ }
 
-.saga>.text-and-art>.text-box>p {
-    margin-top: 0;
-    margin-bottom: 0;
-}
+ div.card.saga div.text-and-art div.text-box p.step {
+     margin-top: 0;
+     margin-bottom: 0;
+     margin-left: 2.5mm;
+     position: relative;
+ }
 
-.saga>.text-and-art>.text-box>.step {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 2.5mm;
-    position: relative;
-}
-
-.saga>.text-and-art>.text-box>.step>.hex {
-    font-size: 9pt;
-    float: left;
-    margin-left: -5mm;
-    width: 1.2em;
-    text-align: center;
-    border-style: solid;
-    border-width: 0.2mm;
-    border-color: grey;
-    background: linear-gradient(white 0%, lightgray 100%);
-}
+ div.card.saga div.text-and-art div.text-box p.step span.hex {
+     font-size: 9pt;
+     float: left;
+     margin-left: -5mm;
+     width: 1.2em;
+     text-align: center;
+     border-style: solid;
+     border-width: 0.2mm;
+     border-color: grey;
+     background: linear-gradient(white 0%, lightgray 100%);
+ }
